# atomflow

./: README.md  pyproject.toml
atomflow/: aspects.py  atom.py  components.py  features.py
atomflow/aspects/: __init__.py  aspects.py
atomflow/atom/: __init__.py  atom.py
atomflow/components/: __init__.py  components.py
atomflow/formats/: __init__.py  cif.py  fasta.py  format.py  formats.py  pdb.py
atomflow/iterator/: __init__.py  iterator.py
atomflow/knowledge/: __init__.py  codes.py
tests/: test_aspects.py  test_atom.py  test_components.py  test_formats.py  utils.py
tests/test_formats/: test_cif.py  test_fasta.py  test_pdb.py
tests/test_iterator/: test_fasta.py  test_filter.py  test_pdb.py  test_read.py  test_write.py
